# base_project

chatter_bro/: CMakeLists.txt  package.xml
chatter_receiver/: CMakeLists.txt
chatter_sender/: CMakeLists.txt
chatter_sender/launch/: hello.launch
mypkg/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
mypkg/launch/: hello.launch~
mypkg/src/: hello.cpp  hello.cpp~
