<?xml version="1.0"?>
<package>
  <name>mypkg</name>
  <version>1.0</version>
  <description>My package</description>
  <maintainer email="robbyczajkowski@gmail.com">Robinson Czajkowski</maintainer>
  <license>BSD</license>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>
  <build_depend>catkin_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>catkin_msgs</run_depend>
  <run_depend>roscpp</run_depend>

  <export></export>
</package>
